# swing

./: CMakeLists.txt  Cargo.toml  INSTALL.md  README.md  Thread.th  Thread.yml  syntax.json  whee  whee.c  whee.rs
.github/workflows/: bun-release.yml  release.yml  whee-compilation.yml  whee-release.yml
etc/: syntax.json
include/: commands.h  compiler.h  math.h  utils.h
public/samples/: hello-world.whee  package-updating-using-brewix.wyml
public/samples/hello-from-whee.wheep/: main.whee
src/: commands.c  compiler.c  main.c  main.cpp  utils.c  wcc.cpp  wcc.rs  whee.cpp  whee.rs  wheec.cpp  wheec.rs
src/cmd/: cmd_int.c  cmd_let.c  cmd_print.c  cmd_void.c
whee-to-c/: main.c  sample.go  whee-to-c  whee-to-c.c
whee_rust/: whee_rust  whee_rust.rs
wheec/: wheec
